Edit Tannnn Flameeeeeeeeee...!!!!!!!

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-15/int06-15.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-15/int06-15.component.html
@@ -9,7 +9,7 @@
     <br>
     <div class="ui form">
       <div class="ui attached">
-        <div class="inline fields">
+        <!-- <div class="inline fields">
           <div class="one wide field"></div>
           <div class="two wide field">
             <label class="full-width text-right">ประเภทเอกสาร</label>
@@ -22,7 +22,7 @@
               </option>
             </select>
         </div>
-        </div>
+        </div> -->
         <div class="inline fields  ui grid">
           <div class="three wide field ">
               <label class="text-right full-width">สำนักงานสรรพสามิตภาค</label>
@@ -96,7 +96,7 @@
           <thead>
               <tr style="text-align: center">
                   <th>ลำดับที่</th>
-                  <th>ชื่อผู้เช็ค</th>
+                  <th>ชื่อผู้เบิก</th>
                   <th>ตำแหน่ง</th>
                   <th>รายการเชค</th>  
                   <th>จำนวนเงิน</th>             
@@ -109,7 +109,7 @@
           <div class="sixteen wide column">            
   
               <button class="ui mini primary button" >
-                  <i class="print plane icon"></i> ส่งออกไฟล์เอ็กเซล
+                  <i class="print plane icon"></i> ส่งออกไฟล์ Excel
                 </button>
           </div>
       </div>
