--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-14/int06-14.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-14/int06-14.component.html
@@ -9,7 +9,7 @@
     <br>
     <div class="ui form">
       <div class="ui attached">
-        <div class="inline fields">
+        <!-- <div class="inline fields">
           <div class="one wide field"></div>
           <div class="two wide field">
             <label class="full-width text-right">เลือกประเภทเอกสาร</label>
@@ -22,7 +22,7 @@
               </option>
             </select>
         </div>
-        </div>
+        </div> -->
         <div class="inline fields  ui grid">
           <div class="three wide field ">
               <label class="text-right full-width">สำนักงานสรรพสามิตภาค</label>
@@ -94,9 +94,9 @@
           <thead>
               <tr style="text-align: center">
                   <th>ลำดับที่</th>
-                  <th>ชื่อผู้เช็ค</th>
-                  <th>รายการเช็ค</th>
-                  <th>จำนวนครั้งที่เช็ค</th>               
+                  <th>ชื่อผู้เบิก</th>
+                  <th>รายการเบิก</th>
+                  <th>จำนวนครั้งที่เบิก</th>               
               </tr>
          
           </thead>
@@ -106,7 +106,7 @@
           <div class="sixteen wide column">            
   
               <button class="ui mini primary button" >
-                  <i class="print plane icon"></i> ส่งออกไฟล์เอ็กเซล
+                  <i class="print plane icon"></i> ส่งออกไฟล์ Excel
                 </button>
           </div>
       </div>
