--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
@@ -114,7 +114,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="eight wide field ">
-        <textarea rows="5"></textarea>
+        <textarea name="resultGetRawBox" rows="5"></textarea>
       </div>
     </div>
     <div class="inline fields">
@@ -170,7 +170,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="eight wide field ">
-        <textarea rows="5"></textarea>
+        <textarea name="resultPayRawBox" rows="5"></textarea>
       </div>
     </div>
     <div class="inline fields">
@@ -206,7 +206,7 @@
         <label>ใบสั่งซื้อทั้งหมด: </label>
       </div>
       <div class="two wide field ">
-        <input type="text">
+        <input name="buyInvoiceNum" type="text">
         <label> &nbsp; ฉบับ</label>
       </div>
     </div>
@@ -219,7 +219,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="eight wide field ">
-        <textarea rows="5"></textarea>
+        <textarea name="buyInvoiceBox" rows="5"></textarea>
       </div>
     </div>
     <div class="inline fields">
@@ -255,7 +255,7 @@
         <label>ข้อมูลใบกำกับภาษีทั้งหมด: </label>
       </div>
       <div class="two wide field ">
-        <input type="text" >
+        <input type="text" name="taxInvoiceNum">
         <label> &nbsp; ฉบับ</label>
       </div>
     </div>
@@ -268,7 +268,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="eight wide field ">
-        <textarea rows="5"></textarea>
+        <textarea rows="5" name="taxInvoiceBox"></textarea>
       </div>
     </div>
     <div class="inline fields">
@@ -304,7 +304,7 @@
         <label>บัญชีงบดุล: </label>
       </div>
       <div class="two wide field ">
-        <input type="text">
+        <input type="text" name="balanceAccountNum">
         <label> &nbsp; ฉบับ</label>
       </div>
     </div>
@@ -317,7 +317,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="eight wide field ">
-        <textarea rows="5"></textarea>
+        <textarea rows="5" name="balanceAccountBox"></textarea>
       </div>
     </div>
     <div class="inline fields">
