--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -245,21 +245,21 @@
                 <a class="item " *ngIf="authService.renderByPage('cop03/1')" [routerLink]="[ '/cop03/1'] " routerLinkActive="active ">จัดทำหนังสือขออนุมัติเดินทางไปราชการตรวจปฏิบัติการ</a>
                 <a class="item " *ngIf="authService.renderByPage('cop03/1/1')" [routerLink]="[ '/cop03/1/1'] " routerLinkActive="active ">ค้นหาหนังสือขออนนุมัติเดินทางไปราชการ</a> -->
             <a class="item " *ngIf="authService.renderByPage('cop07/1')" [routerLink]="[ '/cop07/1'] " routerLinkActive="active ">แผนการตรวจปฏิบัติการประจำปี</a>
-            <!-- <a class="item " *ngIf="authService.renderByPage('cop08')" [routerLink]="[ '/cop08'] " routerLinkActive="active ">วิเคราะห์แนวโน้มการชำระภาษีของผู้ประกอบการ</a> -->
+            <!-- <a class="item " *ngIf="authService.renderByPage('cop08')" [routerLink]="[ '/cop08'] " routerLinkActive="active ">วิเคราะห์แนวโน้มการชำระภาษีของผู้ประกอบการ</a>
             <div class="ui dropdown item ">รายงานการตรวจปฏิบัติการ
                 <i class="dropdown icon "></i>
                 <div class="menu">
 
                     <a class="item " [routerLink]="['/cop06/1/1']">รายงานผลการตรวจปฏิบัติการการจ่ายวัตถุดิบ</a>
                     <a class="item " [routerLink]="['/cop06/1/2']">รายงานผลการตรวจปฏิบัติการตรวจนับวัตถุดิบคงเหลือ</a>
-                    <!-- <a class="item " [routerLink]="['/cop06/3']">รายงานผลการตรวจปฏิบัติการรับสินค้าสำเร็จรูป</a>
-                    <a class="item " [routerLink]="['/cop06/3/1']">รายงานผลการตรวจปฏิบัติการจ่ายสินคาสำเร็จรูป</a> -->
+                    <a class="item " [routerLink]="['/cop06/3']">รายงานผลการตรวจปฏิบัติการรับสินค้าสำเร็จรูป</a>
+                    <a class="item " [routerLink]="['/cop06/3/1']">รายงานผลการตรวจปฏิบัติการจ่ายสินคาสำเร็จรูป</a>
                     <a class="item " [routerLink]="['/cop06/4']">รายงานการตรวจปฏิบัติการตรวจสอบการลดหย่อนภาษี</a>
 
                 </div>
             </div>
-            <!-- <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/cop06'] " routerLinkActive="active ">รายงานการตรวจปฏิบัติการ</a> -->
-            <a class="item " *ngIf="authService.renderByPage('cop09/1')" [routerLink]="[ '/cop09/1'] " routerLinkActive="active ">สรุปแผนการตรวจปฏิบัติการ</a>
+            <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/cop06'] " routerLinkActive="active ">รายงานการตรวจปฏิบัติการ</a> -->
+            <a class="item " *ngIf="authService.renderByPage('cop09/1')" [routerLink]="[ '/cop09/1'] " routerLinkActive="active ">ตรวจสอบข้อมูล</a>
             <!-- <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/tax-audit-manage'] " routerLinkActive="active ">จัดทำหนังสือราชการ บันทึกข้อความ และแบบ ตส.ต่างๆ</a> -->
             <a class="item " *ngIf="authService.renderByPage('cop10')" [routerLink]="[ '/cop10'] " routerLinkActive="active ">กราฟแผนการตรวจปฏิบัติการประจำปี</a>
             <!-- <a class="item " *ngIf="authService.renderByPage('cop04/1')" [routerLink]="[ '/cop04/1'] " routerLinkActive="active ">บันทึกผลการตรวจปฏิบัติการ</a>
