--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-1/cop09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-1/cop09-1.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br>
 <div class="sixteen wide column">
-  <h2 class="ui header">สรุปแผนการตรวจปฏิบัติการ</h2>
+  <h2 class="ui header">ตรวจสอบข้อมูล</h2>
 
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
     <span>ระบุเงื่อนไขในการค้นหา</span>
@@ -38,50 +38,76 @@
   </div>
   <br>
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>รายละเอียดตามแผนปฏิบัติการ</span>
-    </div>
-      <div class="ui attached  segment">
-    
-        <table id="tableData" class="ui small celled table nowrap striped selectable" style="width: 100%">
-          <thead>
-    
-            <tr>
-              <th style="text-align: center !important;">ลำดับ</th>
-              <th style="text-align: center !important;">เลขที่ผู้ประกอบการ</th>
-              <th style="text-align: center !important;">ชื่อผู้ประกอบการ</th>
-              <th style="text-align: center !important;">สถานที่ตั้งของผู้ประกอบการ</th>
-              <th style="text-align: center !important;">วันที่ตรวจ</th>
-              <th style="text-align: center !important;">แผนปฏิบัติการ</th>
-              <th style="text-align: center !important;">สถานะ</th>
-            </tr>
-    
-          </thead>
-        </table>
-    
-      </div>
+    <span>รายละเอียดตามแผนปฏิบัติการ</span>
+  </div>
+  <div class="ui attached  segment">
+
+    <table id="tableData" class="ui small celled table nowrap striped selectable" style="width: 100%">
+      <thead>
+
+        <tr>
+          <th style="text-align: center !important;"></th>
+          <th style="text-align: center !important;">ลำดับ</th>
+          <th style="text-align: center !important;">เลขที่ผู้ประกอบการ</th>
+          <th style="text-align: center !important;">ชื่อผู้ประกอบการ</th>
+          <th style="text-align: center !important;">สถานที่ตั้งของผู้ประกอบการ</th>
+          <th style="text-align: center !important;">วันที่ตรวจ</th>
+          <th style="text-align: center !important;">แผนปฏิบัติการ</th>
+          <th style="text-align: center !important;">สถานะ</th>
+        </tr>
+
+      </thead>
+    </table>
+
+  </div>
+  <br>
+  <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <span>รายละเอียดนอกแผนปฏิบัติการ</span>
+  </div>
+  <div class="ui attached  segment">
+    <div class="ui form center aligned" ngNativeValidate>
+
       <br>
-      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span>รายละเอียดนอกแผนปฏิบัติการ</span>
-      </div>
-      <div class="ui attached  segment">
-        <div class="ui form center aligned" ngNativeValidate>
-    
-          <br>
-          <table id="tableData2" class="ui small celled table nowrap striped selectable" style="width: 100%">
-            <thead>
-    
-              <tr>
-                <th style="text-align: center !important;">ลำดับ</th>
-                <th style="text-align: center !important;">เลขที่ผู้ประกอบการ</th>
-                <th style="text-align: center !important;">ชื่อผู้ประกอบการ</th>
-                <th style="text-align: center !important;">สถานที่ตั้งของผู้ประกอบการ</th>
-                <th style="text-align: center !important;">วันที่ตรวจ</th>
-                <th style="text-align: center !important;">แผนปฏิบัติการ</th>
-                <th style="text-align: center !important;">สถานะ</th>
-              </tr>
-    
-            </thead>
-          </table>
+      <table id="tableData2" class="ui small celled table nowrap striped selectable" style="width: 100%">
+        <thead>
+
+          <tr>
+            <th style="text-align: center !important;"></th>
+            <th style="text-align: center !important;">ลำดับ</th>
+            <th style="text-align: center !important;">เลขที่ผู้ประกอบการ</th>
+            <th style="text-align: center !important;">ชื่อผู้ประกอบการ</th>
+            <th style="text-align: center !important;">สถานที่ตั้งของผู้ประกอบการ</th>
+            <th style="text-align: center !important;">วันที่ตรวจ</th>
+            <th style="text-align: center !important;">แผนปฏิบัติการ</th>
+            <th style="text-align: center !important;">สถานะ</th>
+          </tr>
+
+        </thead>
+      </table>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="ui small modal transition hidden" id='modalTsl'>
+    <div class="header" style="text-align: center !important;background: #1e83db;color: white;">
+        เลือกเดือนที่ต้องการตรวจสอบข้อมูล
+    </div>
+    <div class="content">
+        <div class="ui calendar full-width" id="dateModal" style="text-align: center;">
+          <div class="ui input left icon">
+            <i class="clock icon"></i>
+            <input id="dateM" name="dateM" type="text" autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
+          </div>
         </div>
       </div>
-</div>
+  
+    <div class="actions">
+      <div class="ui mini yellow button" type="button"  (click)="onClickOK()">
+        <i class="edit icon"></i>ตรวจสอบ</div>
+      <div class="ui mini deny button" type="button" >
+        <i class="close icon"></i>ยกเลิก</div>
+    </div>
+  </div>
+
+
+<!-- End Modal -->
