updatecode tax report

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
@@ -114,7 +114,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="eight wide field ">
-        <textarea  id="resultGetRawBox" name="resultGetRawBox" [(ngModel)]="obj.resultGetRawBox" rows="5"></textarea>
+        <textarea  id="resultGetRawBox" name="resultGetRawBox" [(ngModel)]="obj.resultGetRawBox" maxlength="300" rows="5"></textarea>
       </div>
     </div>
     <div class="inline fields">
@@ -170,7 +170,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="eight wide field ">
-        <textarea id="resultPayRawBox" name="resultPayRawBox" [(ngModel)]="obj.resultPayRawBox" rows="5"></textarea>
+        <textarea id="resultPayRawBox" name="resultPayRawBox" [(ngModel)]="obj.resultPayRawBox" maxlength="300" rows="5"></textarea>
       </div>
     </div>
     <div class="inline fields">
