--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TaxAuditForm001.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TaxAuditForm001.jrxml
@@ -14,6 +14,20 @@
 	<style name="title" hTextAlign="Center" hImageAlign="Center" vTextAlign="Middle" vImageAlign="Middle" fontName="TH Sarabun New" fontSize="22"/>
 	<style name="label" hImageAlign="Center" vTextAlign="Bottom" vImageAlign="Middle" fontName="TH Sarabun New" fontSize="16"/>
 	<style name="detial" hImageAlign="Center" vTextAlign="Middle" vImageAlign="Middle" fontName="TH Sarabun New" fontSize="16"/>
+	<parameter name="exciseId" class="java.lang.String"/>
+	<parameter name="companyName" class="java.lang.String"/>
+	<parameter name="companyAddress" class="java.lang.String"/>
+	<parameter name="dateCalendar" class="java.lang.String"/>
+	<parameter name="exciseArea" class="java.lang.String"/>
+	<parameter name="exciseSubArea" class="java.lang.String"/>
+	<parameter name="product" class="java.lang.String"/>
+	<parameter name="riskTypeDesc" class="java.lang.String"/>
+	<parameter name="resultGetRaw" class="java.lang.String"/>
+	<parameter name="resultGetRawBox" class="java.lang.String"/>
+	<parameter name="resultPayRaw" class="java.lang.String"/>
+	<parameter name="resultPayRawBox" class="java.lang.String"/>
+	<parameter name="officer" class="java.lang.String"/>
+	<parameter name="date" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -45,33 +59,36 @@
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="140" y="38" width="310" height="20" uuid="31c33b63-6641-4f34-86ed-4ee75f6a0945"/>
+				<reportElement x="138" y="38" width="312" height="20" uuid="31c33b63-6641-4f34-86ed-4ee75f6a0945"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="110" y="13" width="331" height="25" uuid="6af9a53f-0270-4415-88f8-1921e196f727"/>
+				<reportElement style="label" x="110" y="13" width="331" height="25" uuid="6af9a53f-0270-4415-88f8-1921e196f727"/>
+				<textFieldExpression><![CDATA[$P{exciseId}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="140" y="38" width="301" height="25" uuid="fa58fd69-1db4-4fa9-8b52-b76be51512e1"/>
+				<reportElement key="" style="label" x="140" y="38" width="301" height="25" uuid="fa58fd69-1db4-4fa9-8b52-b76be51512e1"/>
+				<textFieldExpression><![CDATA[$P{companyName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="label" x="0" y="63" width="140" height="25" uuid="69354172-a395-4caf-91d9-f94f1d8d1aca"/>
+				<reportElement style="label" x="0" y="63" width="150" height="25" uuid="69354172-a395-4caf-91d9-f94f1d8d1aca"/>
 				<textFieldExpression><![CDATA["ที่อยู่สถานบริการ/โรงอุตสาหกรรม"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="140" y="63" width="310" height="20" uuid="763eddd1-08c1-4ce6-bb4a-dd7959caca28"/>
+				<reportElement x="150" y="63" width="300" height="20" uuid="763eddd1-08c1-4ce6-bb4a-dd7959caca28"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="10" y="63" width="431" height="50" uuid="2222f2ed-244c-4e30-89da-d0e311c88f74"/>
+				<reportElement style="label" x="1" y="66" width="440" height="46" uuid="2222f2ed-244c-4e30-89da-d0e311c88f74"/>
 				<textElement verticalAlignment="Top"/>
+				<textFieldExpression><![CDATA["                                            "+$P{companyAddress}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="88" width="450" height="20" uuid="ccded0a0-99df-4b8e-8787-b786322238c1"/>
+				<reportElement x="0" y="84" width="450" height="20" uuid="ccded0a0-99df-4b8e-8787-b786322238c1"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
@@ -87,7 +104,8 @@
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="110" y="113" width="331" height="25" uuid="5ead8461-cdf0-4126-9396-62becfbd92bb"/>
+				<reportElement style="label" x="120" y="113" width="321" height="25" uuid="5ead8461-cdf0-4126-9396-62becfbd92bb"/>
+				<textFieldExpression><![CDATA[$P{exciseArea}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="label" x="0" y="138" width="110" height="25" uuid="f82ab002-39af-477c-ac0b-a68be5f8e138"/>
@@ -100,7 +118,8 @@
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="110" y="138" width="331" height="25" uuid="f6031379-e801-41cd-96ad-c4a62e2827f3"/>
+				<reportElement style="label" x="120" y="138" width="321" height="25" uuid="f6031379-e801-41cd-96ad-c4a62e2827f3"/>
+				<textFieldExpression><![CDATA[$P{exciseSubArea}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="label" x="0" y="163" width="30" height="25" uuid="09673678-164c-4df8-baf7-1338de41d0bc"/>
@@ -123,10 +142,12 @@
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="30" y="163" width="147" height="25" uuid="44018ad9-b201-409e-b45c-146611626342"/>
+				<reportElement style="label" x="30" y="163" width="147" height="25" uuid="44018ad9-b201-409e-b45c-146611626342"/>
+				<textFieldExpression><![CDATA[$P{product}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="290" y="163" width="151" height="25" uuid="45c48128-7c33-4d7a-b196-21a24edf3cbc"/>
+				<reportElement style="label" x="290" y="163" width="151" height="25" uuid="45c48128-7c33-4d7a-b196-21a24edf3cbc"/>
+				<textFieldExpression><![CDATA[$P{riskTypeDesc}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="label" x="0" y="188" width="120" height="25" uuid="0feda499-dc59-4103-a092-39329b3b87f8"/>
@@ -139,7 +160,8 @@
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="120" y="188" width="321" height="25" uuid="22ad1afe-d6a6-44f8-b76d-a32c5c6fa8f0"/>
+				<reportElement style="label" x="120" y="188" width="321" height="25" uuid="22ad1afe-d6a6-44f8-b76d-a32c5c6fa8f0"/>
+				<textFieldExpression><![CDATA[$P{dateCalendar}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="label" x="0" y="237" width="177" height="25" uuid="f5baec78-e1e6-4a73-9736-360d99f2ac15"/>
@@ -147,8 +169,9 @@
 				<textFieldExpression><![CDATA["ผลการตรวจสอบ ข้อมูลการรับวัตุดิบ"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="262" width="150" height="25" uuid="01e86f1b-bd51-42b9-8dad-ce37995dd79c"/>
+				<reportElement style="label" x="0" y="262" width="150" height="25" uuid="01e86f1b-bd51-42b9-8dad-ce37995dd79c"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[($P{resultGetRaw}!= null)? $P{resultGetRaw} : ""]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="label" x="57" y="287" width="93" height="25" uuid="c58f94bb-0a4f-48fa-8756-15ce14ee3df9"/>
@@ -161,25 +184,25 @@
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="312" width="450" height="20" uuid="d8636efe-4f6f-4808-b98c-8c4402901aa9"/>
+				<reportElement x="0" y="310" width="450" height="20" uuid="d8636efe-4f6f-4808-b98c-8c4402901aa9"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="339" width="450" height="20" uuid="201b8cc8-3697-4b27-bdf4-c22bba73873f"/>
+				<reportElement x="0" y="332" width="450" height="20" uuid="201b8cc8-3697-4b27-bdf4-c22bba73873f"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="367" width="450" height="20" uuid="f68b0b86-9b1d-460d-b080-2a0e9d33e8d8"/>
+				<reportElement x="0" y="353" width="450" height="20" uuid="f68b0b86-9b1d-460d-b080-2a0e9d33e8d8"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="394" width="450" height="20" uuid="84e8f29d-13dd-46b3-b05a-993f8cb57216"/>
+				<reportElement x="0" y="373" width="450" height="20" uuid="84e8f29d-13dd-46b3-b05a-993f8cb57216"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
@@ -189,48 +212,115 @@
 				<textFieldExpression><![CDATA["ผลการตรวจสอบ ข้อมูลการจ่ายวัตุดิบ"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="1" y="480" width="150" height="25" uuid="01db59f5-8b49-42b4-9990-0878b3d828ec"/>
+				<reportElement style="label" stretchType="ElementGroupHeight" x="1" y="480" width="150" height="25" uuid="01db59f5-8b49-42b4-9990-0878b3d828ec"/>
+				<textFieldExpression><![CDATA[($P{resultPayRaw}!= null)? $P{resultPayRaw} : ""]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement style="label" x="1" y="291" width="440" height="119" uuid="97b79724-1b5a-4327-a27d-857c73fdc5bc"/>
+				<textElement verticalAlignment="Top"/>
+				<textFieldExpression><![CDATA[($P{resultGetRawBox}!= null)? "                                            "+$P{resultGetRawBox} : "" ]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="label" x="58" y="505" width="93" height="25" uuid="5e42c07a-8a38-4d1a-bac0-a500a4b42af1"/>
+				<reportElement style="label" x="57" y="502" width="93" height="25" uuid="03968990-a491-4b16-9897-0db6df28d22c"/>
 				<textFieldExpression><![CDATA["ความเห็นผู้ตรวจสอบ"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="151" y="505" width="300" height="20" uuid="7ba655f1-22a0-4e7e-a46f-a2134a363e64"/>
+				<reportElement x="150" y="502" width="300" height="20" uuid="70d51e83-3023-400e-ac22-f55a0064f230"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="1" y="530" width="450" height="20" uuid="3760d77c-e4a2-4033-9e98-5ef649a4b3c7"/>
+				<reportElement x="0" y="525" width="450" height="20" uuid="11cb9e83-e8d4-47b1-9b02-6a4e506a3164"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="1" y="557" width="450" height="20" uuid="9cef87c8-ceac-43b2-9331-79ba916e000c"/>
+				<reportElement x="0" y="547" width="450" height="20" uuid="996574be-25dd-48e1-8d1f-d1d9476ab40a"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="1" y="585" width="450" height="20" uuid="c6253314-79a2-49b2-a765-4e5c43d0dfa7"/>
+				<reportElement x="0" y="568" width="450" height="20" uuid="fa2ef654-2357-441b-8281-5e0bb3e12612"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="1" y="609" width="450" height="20" uuid="2774ff79-084f-4fdb-b503-dd27b2980b32"/>
+				<reportElement x="0" y="588" width="450" height="20" uuid="1912f903-236a-4b99-94bd-507bd0a9988d"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Dotted"/>
 				</box>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement style="label" x="1" y="506" width="440" height="119" uuid="b953b47f-4bd4-42ca-b207-e90651fee5ce"/>
+				<textElement verticalAlignment="Top"/>
+				<textFieldExpression><![CDATA[($P{resultPayRawBox}!= null)? "                                            "+$P{resultPayRawBox} : "" ]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band height="18" splitType="Stretch"/>
 	</columnFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="75" splitType="Stretch">
+			<textField>
+				<reportElement style="label" x="200" y="0" width="154" height="25" uuid="0bb30311-f01f-427e-a35b-8c9d631cb9bf"/>
+				<box>
+					<pen lineWidth="1.0" lineStyle="Dotted"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Dotted" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textFieldExpression><![CDATA[""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="label" x="188" y="27" width="175" height="25" uuid="ebd380e7-a107-4f23-8a14-71e21000e0e7"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$P{officer}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="label" x="189" y="0" width="11" height="25" uuid="a642eee9-df4b-46e0-88f8-1bf087ef74fe"/>
+				<textFieldExpression><![CDATA["("]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="label" x="354" y="0" width="11" height="25" uuid="cf701f84-e8f1-44b8-9dcd-4b572571d068"/>
+				<textFieldExpression><![CDATA[")"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="label" x="354" y="25" width="85" height="25" uuid="ee68b0e7-c860-4663-930f-6e61a86e9e24"/>
+				<textFieldExpression><![CDATA["ผู้ตรวจสอบภาษี"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="label" x="200" y="22" width="154" height="25" uuid="0a44b8d7-baeb-4395-8595-4e4a7c6996b3"/>
+				<box>
+					<pen lineWidth="1.0" lineStyle="Dotted"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Dotted" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textFieldExpression><![CDATA[""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="label" x="200" y="45" width="154" height="25" uuid="2fe248c8-f590-4b07-b7ec-9055f986f5b1"/>
+				<box>
+					<pen lineWidth="1.0" lineStyle="Dotted"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Dotted" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textFieldExpression><![CDATA[""]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement style="label" stretchType="ElementGroupHeight" x="200" y="50" width="154" height="25" uuid="cc160021-c94d-4762-82b0-276ed31a6d27"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$P{date}]]></textFieldExpression>
+			</textField>
+		</band>
 	</summary>
 </jasperReport>
