Update Report for OperationAudit

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
@@ -121,7 +121,7 @@
       <div class="four wide field"></div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="resultGetRaw" name="resultGetRaw"  value="ข้อมูลถูกต้อง" [checked]="true">
+          <input type="radio" id="resultGetRaw" name="resultGetRaw"  value="ข้อมูลถูกต้อง">
           <label>ข้อมูลถูกต้อง</label>
         </div>
       </div>
@@ -177,7 +177,7 @@
       <div class="four wide field"></div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="resultPayRaw" name="resultPayRaw"  value="ข้อมูลถูกต้อง" [checked]="true">
+          <input type="radio" id="resultPayRaw" name="resultPayRaw"  value="ข้อมูลถูกต้อง">
           <label>ข้อมูลถูกต้อง</label>
         </div>
       </div>
@@ -233,7 +233,7 @@
       <div class="four wide field"></div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="receiptInvoiceRaw" name="receiptInvoiceRaw"  value="ข้อมูลถูกต้อง" [checked]="true">
+          <input type="radio" id="receiptInvoiceRaw" name="receiptInvoiceRaw"  value="ข้อมูลถูกต้อง">
           <label>ข้อมูลถูกต้อง</label>
         </div>
       </div>
@@ -251,7 +251,7 @@
   <br />
   <div class="ui grid center aligned">
     <div class="sixteen wide column">
-      <h4>ข้อมูลการจ่ายวัตถุดิบ</h4>
+      <h4>ข้อมูลการจ่ายสินค้าสำเร็จรูป</h4>
     </div>
   </div>
   <br>
@@ -290,7 +290,7 @@
       <div class="four wide field"></div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="payInvoiceRaw" name="payInvoiceRaw"  value="ข้อมูลถูกต้อง" [checked]="true">
+          <input type="radio" id="payInvoiceRaw" name="payInvoiceRaw"  value="ข้อมูลถูกต้อง">
           <label>ข้อมูลถูกต้อง</label>
         </div>
       </div>
